--- a/components/CaseStudiesCommon/SpecialChallengesAndSolutions/styles.module.scss
+++ b/components/CaseStudiesCommon/SpecialChallengesAndSolutions/styles.module.scss
@@ -342,6 +342,14 @@
 
     background-color: $alabaster;
 
+    .contentContainer {
+      background: red;
+      
+      .infoContainer > * + * {
+        margin-left: 0;
+      }
+    }
+
     [data-case-study-title] {
       color: $white;
 
